[project]
name = "programacion-funcional"
version = "0.1.0"
description = "Functional programming project with encryption and hashing utilities for cybersecurity and big data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pylint>=4.0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
